--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       </div>
     </section>
     <section class="about">
-      <div class="wrapper">
-        <img src="./src/img/about-pets.png" alt="" />
+      <div class="wrapper about__wrapper">
+        <img src="./src/img/about-pets.png" class="about__img" />
         <div class="about__content">
-          <h2 class="about__title">About the shelter “Cozy House”</h2>
+          <h3 class="about__title">About the shelter “Cozy House”</h3>
           <p class="about__text">
             Currently we have 121 dogs and 342 cats on our hands and statistics
             show that only 20% of them will find a family. The others will
