--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </section>
     <section class="slider">
-        <div class="wrapper">
+        <div class="wrapper slider__wrapper">
       <h3 class="slider__title">Our friends who are looking for a house</h3>
       <div class="layout-5-column slider-container">
         <div class="slider__arrow-left"><img src="./src/img/Arrow-left.png" alt=""></div>
@@ -77,7 +77,7 @@
           </div>
         <div class="slider__arrow-right"><img src="./src/img/Arrow-right.png" alt="" class="arrow"></div>
       </div>
-      <button class="button button_colored">Get to know the rest</button>
+      <button class="button button_colored button__slider">Get to know the rest</button>
     </div>
     </section>
     <section class="help">
