--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     </section>
     <section class="help">
-        <div class="wrapper">
+        <div class="wrapper help__wrapper">
             <h3 class="help__title">How you can help
                 our shelter</h3>
             <ul class="help__row1">
