--- a/index.html
+++ b/index.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/sass/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="wrapper header__wrapper">
-        <div class="logo">
-          <h1 class="logo-title">Cozy House</h1>
-          <p class="logo-subtitle">Shelter for pets in Boston</p>
-        </div>
-        <nav class="header__navigation">
-          <ul class="navigation">
-            <li class="navigation__link navigation__link_active">About the shelter</li>
-            <li class="navigation__link navigation__link_disabled">Our pets</li>
-            <li class="navigation__link navigation__link_disabled">Help the shelter</li>
-            <li class="navigation__link navigation__link_disabled">Contacts</li>
-          </ul>
-        </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./src/sass/style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="wrapper header__wrapper">
+      <div class="logo">
+        <h1 class="logo-title">Cozy House</h1>
+        <p class="logo-subtitle">Shelter for pets in Boston</p>
       </div>
-    </header>
-    <section class="main-screen">
-      <div class="wrapper main-screen__wrapper">
-        <div class="main-screen__content">
-          <h2 class="main-screen__title">Not only people need a house</h2>
-          <p class="main-screen__text">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-          <button class="button button_colored">Make a friend</button>
-        </div>
-        <img src="./src/img/start-screen-puppy.png" class="main-screen__img"/>
+      <nav class="header__navigation">
+        <ul class="navigation">
+          <li class="navigation__link navigation__link_active">About the shelter</li>
+          <li class="navigation__link navigation__link_disabled">Our pets</li>
+          <li class="navigation__link navigation__link_disabled">Help the shelter</li>
+          <li class="navigation__link navigation__link_disabled">Contacts</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <section class="main-screen">
+    <div class="wrapper main-screen__wrapper">
+      <div class="main-screen__content">
+        <h2 class="main-screen__title">Not only people need a house</h2>
+        <p class="main-screen__text">We offer to give a chance to a little and nice puppy with an extremely wide and
+          open heart. He or she will love you more than anybody else in the world, you will see!</p>
+        <button class="button button_colored">Make a friend</button>
       </div>
-    </section>
-    <section class="about">
-      <div class="wrapper about__wrapper">
-        <img src="./src/img/about-pets.png" class="about__img" />
-        <div class="about__content">
-          <h3 class="about__title">About the shelter “Cozy House”</h3>
-          <p class="about__text">
-            Currently we have 121 dogs and 342 cats on our hands and statistics
-            show that only 20% of them will find a family. The others will
-            continue to live with us and will be waiting for a lucky chance to
-            become dearly loved.
-          </p>
-          <p class="about__text">
-            We feed our wards with the best food and make sure that they do not
-            get sick, feel comfortable (including psychologically) and well. We
-            are supported by 87 volunteers and 28 employees of various skill
-            levels. About 12% of the animals are taken by the shelter staff.
-            Taking care of the animals, they become attached to the pets and
-            would hardly ever leave them alone.
-          </p>
-        </div>
+      <img src="./src/img/start-screen-puppy.png" class="main-screen__img" />
+    </div>
+  </section>
+  <section class="about">
+    <div class="wrapper about__wrapper">
+      <img src="./src/img/about-pets.png" class="about__img" />
+      <div class="about__content">
+        <h3 class="about__title">About the shelter “Cozy House”</h3>
+        <p class="about__text">
+          Currently we have 121 dogs and 342 cats on our hands and statistics
+          show that only 20% of them will find a family. The others will
+          continue to live with us and will be waiting for a lucky chance to
+          become dearly loved.
+        </p>
+        <p class="about__text">
+          We feed our wards with the best food and make sure that they do not
+          get sick, feel comfortable (including psychologically) and well. We
+          are supported by 87 volunteers and 28 employees of various skill
+          levels. About 12% of the animals are taken by the shelter staff.
+          Taking care of the animals, they become attached to the pets and
+          would hardly ever leave them alone.
+        </p>
       </div>
-    </section>
-    <section class="slider">
-        <div class="wrapper slider__wrapper">
+    </div>
+  </section>
+  <section class="slider">
+    <div class="wrapper slider__wrapper">
       <h3 class="slider__title">Our friends who are looking for a house</h3>
       <div class="layout-5-column slider-container">
         <div class="slider__arrow-left"><img src="./src/img/Arrow-left.png" alt=""></div>
@@ -66,66 +69,90 @@
           <button class="button button_bordered">Learn more</button>
         </div>
         <div class="slider__card">
-            <img src="./src/img/card-dogWhite.png" class="slider_cat" />
-            <p class="card_name">Jennifer</p>
-            <button class="button button_bordered">Learn more</button>
-          </div>
-          <div class="slider__card">
-            <img src="./src/img/card-dogRed.png" class="slider_cat" />
-            <p class="card_name">Woody</p>
-            <button class="button button_bordered">Learn more</button>
-          </div>
+          <img src="./src/img/card-dogWhite.png" class="slider_cat" />
+          <p class="card_name">Jennifer</p>
+          <button class="button button_bordered">Learn more</button>
+        </div>
+        <div class="slider__card">
+          <img src="./src/img/card-dogRed.png" class="slider_cat" />
+          <p class="card_name">Woody</p>
+          <button class="button button_bordered">Learn more</button>
+        </div>
         <div class="slider__arrow-right"><img src="./src/img/Arrow-right.png" alt="" class="arrow"></div>
       </div>
       <button class="button button_colored button__slider">Get to know the rest</button>
     </div>
-    </section>
-    <section class="help">
-        <div class="wrapper help__wrapper">
-            <h3 class="help__title">How you can help
-                our shelter</h3>
-            <ul class="help__row1">
-                <li class="row1_cont"><img src="./src/img/ico-help/pet-feed.png" class="ico"><p class="ico-name">Pet food</p></li>
-                <li class="row1_cont"><img src="./src/img/ico-help/transportation.png" class="ico"><p class="ico-name">Transportation</p></li>
-                <li class="row1_cont"><img src="./src/img/ico-help/toys.png" class="ico"><p class="ico-name">Toys</p></li>
-                <li class="row1_cont"><img src="./src/img/ico-help/bowls-and-cups.png" class="ico"><p class="ico-name">Bowls and cups</p></li>
-                <li class="row1_cont"><img src="./src/img/ico-help/shampoos.png" class="ico"><p class="ico-name">Shampoos</p></li>
-            </ul>
-            <ul class="help__row2">
-                <li class="row2_cont"><img src="./src/img/ico-help/vitamins.png" class="ico"><p class="ico-name">Vitamins</p></li>
-                <li class="row2_cont"><img src="./src/img/ico-help/medicines.png" class="ico"><p class="ico-name">Medicines</p></li>
-                <li class="row2_cont"><img src="./src/img/ico-help/collars-or-leashes.png" class="ico"><p class="ico-name">Collars / leashes</p></li>
-                <li class="row2_cont"><img src="./src/img/ico-help/sleeping-area.png" class="ico"><p class="ico-name">Sleeping areas</p></li>
-            </ul>
-        </div>
-    </section>
-    <section class="donation">
+  </section>
+  <section class="help">
+    <div class="wrapper help__wrapper">
+      <h3 class="help__title">How you can help
+        our shelter</h3>
+      <ul class="help__row1">
+        <li class="row1_cont"><img src="./src/img/ico-help/pet-feed.png" class="ico">
+          <p class="ico-name">Pet food</p>
+        </li>
+        <li class="row1_cont"><img src="./src/img/ico-help/transportation.png" class="ico">
+          <p class="ico-name">Transportation</p>
+        </li>
+        <li class="row1_cont"><img src="./src/img/ico-help/toys.png" class="ico">
+          <p class="ico-name">Toys</p>
+        </li>
+        <li class="row1_cont"><img src="./src/img/ico-help/bowls-and-cups.png" class="ico">
+          <p class="ico-name">Bowls and cups</p>
+        </li>
+        <li class="row1_cont"><img src="./src/img/ico-help/shampoos.png" class="ico">
+          <p class="ico-name">Shampoos</p>
+        </li>
+      </ul>
+      <ul class="help__row2">
+        <li class="row2_cont"><img src="./src/img/ico-help/vitamins.png" class="ico">
+          <p class="ico-name">Vitamins</p>
+        </li>
+        <li class="row2_cont"><img src="./src/img/ico-help/medicines.png" class="ico">
+          <p class="ico-name">Medicines</p>
+        </li>
+        <li class="row2_cont"><img src="./src/img/ico-help/collars-or-leashes.png" class="ico">
+          <p class="ico-name">Collars / leashes</p>
+        </li>
+        <li class="row2_cont"><img src="./src/img/ico-help/sleeping-area.png" class="ico">
+          <p class="ico-name">Sleeping areas</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="donation">
+    <div class="wrapper donation__wrapper">
+      <img src="./src/img/donation-dog.png" class="donation__img">
+      <div class="donation__content">
+        <h3 class="donation_title">You can also make a donation</h3>
+        <h5 class="donation_subtitle">Name of the bank / Type of bank account</h5>
+        <p class="donation__number">8380 2880 8028 8791 7435</p>
+        <p class="donation_text">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+          a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et
+          malesuada fames ac ante ipsum primis in faucibus.</p>
+      </div>
+  </div>
+  </section>
+      <section class="footer">
         <div class="wrapper">
-            <img src="./src/img/donation-dog.png"   class="donation__img">
-            <div class="donation__content">
-                <h3 class="donation_title">You can also make a donation</h3>
-                <h5 class="donation_subtitle">Name of the bank / Type of bank account</h5>
-                <p class="donation_text">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          <div class="footer__content">
+            <div class="content__contacts">
+              <h3 class="contacts_title"></h3>
+              <div class="contacts__link"><span class="ico"></span><a href="mailto:">email@shelter.com</a></div>
+              <div class="contacts__link"><span class="ico"><a href="tel:+">+13 674 567 75 54</a></span></a></div>
             </div>
-            <section class="footer">
-                <div class="wrapper">
-                    <div class="footer__content">
-                        <div class="content__contacts">
-                            <h3 class="contacts_title"></h3>
-                            <div class="contacts__link"><span class="ico"></span><a href="mailto:">email@shelter.com</a></div>
-                            <div class="contacts__link"><span class="ico"><a href="tel:+">+13 674 567 75 54</a></span></a></div>
-                        </div>
 
-                        <div class="content__location">
-                            <h3 class="location__title">We are waiting for your visit</h3>
-                            <div class="location__link"><span class="ico"></span><a href="">1 Central Street, Boston (entrance from the store)</a></div>
-                            <div class="location__link"><span class="ico"></span><a href="">18 South Park, London </a></div>
-                        </div>
-                        <img src="./src/img/footer-puppy.png"  class="footer__img">
-                    </div>
-                </div>
-            </section>
+            <div class="content__location">
+              <h3 class="location__title">We are waiting for your visit</h3>
+              <div class="location__link"><span class="ico"></span><a href="">1 Central Street, Boston (entrance from
+                  the store)</a></div>
+              <div class="location__link"><span class="ico"></span><a href="">18 South Park, London </a></div>
+            </div>
+            <img src="./src/img/footer-puppy.png" class="footer__img">
+          </div>
         </div>
-    </section>
-  </body>
+      </section>
+
+</body>
+
 </html>
