--- a/index.html
+++ b/index.html
@@ -134,19 +134,43 @@
   </div>
   </section>
       <section class="footer">
-        <div class="wrapper">
+        <div class="wrapper wrapper__footer">
           <div class="footer__content">
-            <div class="content__contacts">
-              <h3 class="contacts_title"></h3>
-              <div class="contacts__link"><span class="ico"></span><a href="mailto:">email@shelter.com</a></div>
-              <div class="contacts__link"><span class="ico"><a href="tel:+">+13 674 567 75 54</a></span></a></div>
+            <div class="content__contacts footer__info">
+              <h3 class="contacts_title">For questions and suggestions</h3>
+              <div class="contacts__link"><span class="ico ico__mail">
+                <object
+                type="image/svg+xml"
+                data="picture.svg">
+                <img
+                  src="./src/img/ico-footer/mail.svg"></object>
+              </span><a href="mailto:">email@shelter.com</a></div>
+              <div class="contacts__link"><span class="ico ico__tel">
+                <object
+                type="image/svg+xml"
+                data="picture.svg">
+                <img
+                  src="./src/img/ico-footer/phone.svg">
+              </object></span><a  href="tel:+">+13 674 567 75 54</a></span></div>
             </div>
 
-            <div class="content__location">
+            <div class="content__location footer__info">
               <h3 class="location__title">We are waiting for your visit</h3>
-              <div class="location__link"><span class="ico"></span><a href="">1 Central Street, Boston (entrance from
+              <div class="location__link"><span class="ico ico__loc">
+                <object
+                type="image/svg+xml"
+                data="picture.svg">
+                <img
+                  src="./src/img/ico-footer/pin.svg"></object>
+              </span><a href="">1 Central Street, Boston (entrance from
                   the store)</a></div>
-              <div class="location__link"><span class="ico"></span><a href="">18 South Park, London </a></div>
+              <div class="location__link"><span class="ico ico__loc">
+                <object
+                type="image/svg+xml"
+                data="picture.svg">
+                <img
+                  src="./src/img/ico-footer/pin.svg"></object>
+              </span><a href="">18 South Park, London </a></div>
             </div>
             <img src="./src/img/footer-puppy.png" class="footer__img">
           </div>
