--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <nav class="header__navigation">
         <ul class="navigation">
           <li class="navigation__link navigation__link_active">About the shelter</li>
-          <li class="navigation__link "><a class="navigation__link_disabled" href="our_pets.html" target="_blank" rel="noopener noreferrer">Our pets</a>
-            </li>
+          <li class="navigation__link "><a class="navigation__link_disabled" href="our_pets.html" target="_blank"
+              rel="noopener noreferrer">Our pets</a>
+          </li>
           <li class="navigation__link navigation__link_disabled">Help the shelter</li>
           <li class="navigation__link navigation__link_disabled">Contacts</li>
         </ul>
@@ -63,34 +64,70 @@
   </section>
   <section class="slider">
     <div class="wrapper slider__wrapper">
-      <h3 class="slider__title">Our friends who are looking for a house</h3>
-      <div class="layout-5-column slider-container">
-        <div class="slider__arrow-left"><img src="./src/img/Arrow-left.png" alt=""></div>
-       <div class="carsd__container">
-        <div class="slider__card">
-          <img src="./src/img/pets-katrine.png" class="slider_cat" />
-          <p class="card_name">Katrine</p>
-          <button class="button button_bordered">Learn more</button>
-        </div>
-        <div class="slider__card">
-          <img src="./src/img/pets-jennifer.png" class="slider_cat" />
-          <p class="card_name">Jennifer</p>
-          <button class="button button_bordered">Learn more</button>
-        </div>
-        <div class="slider__card">
-          <img src="./src/img/pets-woody.png" class="slider_cat" />
-          <p class="card_name">Woody</p>
-          <button class="button button_bordered">Learn more</button>
-        </div>
-       </div>
+      <h3 class="slider__title">
+        <span>
+          Our friends who
+        </span>
+        <span>
+          are looking for a house
+        </span></h3>
+     <div class=" slider-container">
+        <button class="slider__arrow-left btn-left"><img src="../src/img/Arrow-left.png" alt=""></button>
+        <div class=" main-slider" >
+<div id="polosa">
+<div class="slider__card-pets" >
+    <img src="../src/img/pets-katrine (3).png" class="slider_cat" />
+    <p class="card_name">Katrine</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
+  <div class="slider__card-pets">
+    <img src="../src/img/pets-jennifer (1).png" class="slider_cat" />
+    <p class="card_name">Jennifer</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
+  <div class="slider__card-pets">
+    <img src="../src/img/pets-woody (1).png" class="slider_cat" />
+    <p class="card_name">Woody</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
+  <div class="slider__card-pets">
+    <img src="../src/img/pets-sophia.png" class="slider_cat" />
+    <p class="card_name">Sophia</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
 
-        <div class="slider__arrow-right"><img src="./src/img/Arrow-right.png" alt="" class="arrow"></div>
-      </div>
-      <button class="button button_colored button__slider">Get to know the rest</button>
+  <div class="slider__card-pets">
+    <img src="../src/img/pets-timmy.png" class="slider_cat" />
+    <p class="card_name">Timmy</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
+  <div class="slider__card-pets">
+    <img src="../src/img/pets-charly.png" class="slider_cat" />
+    <p class="card_name">Charly</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
+  <div class="slider__card-pets">
+    <img src="../src/img/pets-scarlet.png" class="slider_cat" />
+    <p class="card_name">Scarlett</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
+  <div class="slider__card-pets">
+    <img src="../src/img/pets-freddie.png" class="slider_cat" />
+    <p class="card_name">Freddie</p>
+    <button class="button button_bordered">Learn more</button>
+  </div>
+</div>
+</div>
+<button class="slider__arrow-right btn-right "><img src="../src/img/Arrow-right.png" alt="" class="arrow"></button>
+
+</div>
+
+ <button class="button button_colored button__slider">Get to know the rest</button>
+
+
     </div>
-  </section>
   <section class="help">
-    <div class="wrapper help__wrapper">
+    <div class="wrapper wrapper__help">
       <h3 class="help__title">How you can help
         our shelter</h3>
       <ul class="help__row1">
@@ -132,57 +169,50 @@
       <div class="donation__content">
         <h3 class="donation_title">You can also make a donation</h3>
         <h5 class="donation_subtitle">Name of the bank / Type of bank account</h5>
-        <p class="donation__number"> <img src="./src/img/credit-card.png" alt="" srcset="">  8380 2880 8028 8791 7435</p>
+        <p class="donation__number"> <img src="./src/img/credit-card.png" alt="" srcset=""> 8380 2880 8028 8791 7435</p>
         <p class="donation_text">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
           a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et
           malesuada fames ac ante ipsum primis in faucibus.</p>
       </div>
-  </div>
+    </div>
   </section>
-      <section class="footer">
-        <div class="wrapper wrapper__footer">
-          <div class="footer__content">
-            <div class="content__contacts footer__info">
-              <h3 class="contacts_title">For questions and suggestions</h3>
-              <div class="contacts__link"><span class="ico ico__mail">
-                <object
-                type="image/svg+xml"
-                data="picture.svg">
-                <img
-                  src="./src/img/ico-footer/mail.svg"></object>
-              </span><a href="mailto:">email@shelter.com</a>
-            </div>
-              <div class="contacts__link"><span class="ico ico__tel">
-                <object
-                type="image/svg+xml"
-                data="picture.svg">
-                <img
-                  src="./src/img/ico-footer/phone.svg">
-              </object></span><a  href="tel:+">+13 674 567 75 54</a></span></div>
-            </div>
-
-            <div class="content__location footer__info">
-              <h3 class="location__title">We are waiting for your visit</h3>
-              <div class="location__link"><span class="ico ico__loc">
-
-                <img
-                  src="./src/img/ico-footer/pin.svg">
-              </span><a href="">1 Central Street, Boston (entrance from
-                  the store)</a></div>
-              <div class="location__link"><span class="ico ico__loc">
-                <object
-                type="image/svg+xml"
-                data="picture.svg">
-                <img
-                  src="./src/img/ico-footer/pin.svg"></object>
-              </span><a href="">18 South Park, London </a></div>
-            </div>
-
-            <img src="./src/img/footer-puppy.png" class="footer__img">
-</div>
+  <section class="footer">
+    <div class="wrapper wrapper__footer">
+      <div class="footer__content">
+        <div class="content__contacts footer__info">
+          <h3 class="contacts_title">For questions and suggestions</h3>
+          <div class="contacts__link"><span class="ico ico__mail">
+              <object type="image/svg+xml" data="picture.svg">
+                <img src="./src/img/ico-footer/mail.svg"></object>
+            </span><a href="mailto:">email@shelter.com</a>
+          </div>
+          <div class="contacts__link"><span class="ico ico__tel">
+              <object type="image/svg+xml" data="picture.svg">
+                <img src="./src/img/ico-footer/phone.svg">
+              </object></span><a href="tel:+">+13 674 567 75 54</a></span></div>
         </div>
-      </section>
-<script src="/src/js/js.js"></script>
+
+        <div class="content__location footer__info">
+          <h3 class="location__title">We are waiting for your visit</h3>
+          <div class="location__link"><span class="ico ico__loc">
+
+              <img src="./src/img/ico-footer/pin.svg">
+            </span><a href="">1 Central Street, Boston (entrance from
+              the store)</a></div>
+          <div class="location__link"><span class="ico ico__loc">
+              <object type="image/svg+xml" data="picture.svg">
+                <img src="./src/img/ico-footer/pin.svg"></object>
+            </span><a href="">18 South Park, London </a></div>
+        </div>
+      </div>
+      <div class="footer__img">
+        <img src="./src/img/footer-puppy.png">
+      </div>
+
+
+    </div>
+  </section>
+  <script src="/src/js/main.js"></script>
 </body>
 
 </html>
